--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,21 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/charactersFragment">
+    app:startDestination="@id/itemFragment">
 
     <fragment
-        android:id="@+id/charactersFragment"
-        android:name="com.example.rickandmorty.ui.characters.ItemsFragment"
-        android:label="Characters"
+        android:id="@+id/itemFragment"
+        android:name="com.sd.testmo.data.ui.ItemFragment"
+        android:label="Repository List"
         tools:layout="@layout/item_fragment" >
         <action
             android:id="@+id/action_charactersFragment_to_characterDetailFragment"
-            app:destination="@id/characterDetailFragment" />
+            app:destination="@id/itemDetailFragment" />
 
     </fragment>
+
     <fragment
-        android:id="@+id/characterDetailFragment"
-        android:name="com.example.rickandmorty.ui.characterdetail.CharacterDetailFragment"
-        android:label="Character Detail"
+        android:id="@+id/itemDetailFragment"
+        android:name="com.sd.testmo.data.ui.ItemDetailFragment"
+        android:label="Items Detail"
         tools:layout="@layout/item_detail_fragment" />
+
 </navigation>
